# darcy-lang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LANGUAGE.md  Makefile  README.md  darcy-feedback.md  dslc-wlib  feedback3.md  run  scratch.dsl  shapes.dsl  test_u8_fixed
.githooks/: pre-commit
.zed/: settings.json
bench/: typecheck.json  typecheck.release.json
crates/cargo-darcy/: Cargo.toml
crates/darcy-build/: Cargo.toml
crates/darcy-lsp/: Cargo.toml
crates/darcy-runtime/: Cargo.toml
crates/darcy-stdlib/: Cargo.toml  README.md  build.rs
dslc/: Cargo.toml
dslc/src/: ast.rs  datum.rs  diag.rs  feedback.rs  lexer.rs  lib.rs  lower.rs  macro_expand.rs  main.rs  module.rs  parser.rs  pipeline.rs  reader.rs  type_aliases.rs  typecheck.rs  typed.rs
dslc/tests/: auto_clone_vec.rs  case_exhaustiveness.rs  compile.rs  control_flow.rs  core_stdlib.rs  extern.rs  function_call.rs  infer.rs  inline.rs  interop.rs  let_fn.rs  lex.rs  lower.rs  macros.rs  main_pub.rs  map_stdlib.rs  math_stdlib.rs  module.rs  move_check.rs  nn_stdlib.rs  operators.rs  option_result.rs  overload_arity.rs  parse.rs  print_main.rs  rust_interop.rs  stdlib.rs  str_stdlib.rs  struct_constructor.rs  struct_union_infer.rs  tail_recursion.rs  tensor_stdlib.rs  type_inference.rs  typecheck_errors.rs  u8_struct.rs  union.rs  vector.rs
examples/: ambiguous.dsl  complex.dsl  missing_field.dsl  mnist.dsl  ok.dsl  stdlib_mvp.dsl  strategy_stage1.dsl  strategy_stage2.dsl  strategy_stage3.dsl  test.dsl  union.dsl
examples/prototypes/: ema.dsl  (+6 more)
extensions/: defs.json  gen_grammars.py
fractal-generator/: Cargo.toml  README.md  build.rs  darcy-fractal-feedback-updated.md  darcy-fractal-feedback.md  issue-status-check.md
fractal-generator/darcy/: main.dsl
fractal-generator/src/: main.rs
tests/integration/cargo_darcy_basic/darcy-lib/: Cargo.toml
tests/integration/cargo_darcy_basic/darcy-lib/darcy/: main.dsl
tests/integration/cargo_darcy_basic/darcy-lib/darcy/math/: add.dsl
tests/integration/cargo_darcy_basic/darcy-lib/darcy/util/: scale.dsl
tests/integration/cargo_darcy_basic/darcy-lib/src/: lib.rs
(+52 files in other folders)
