[package]
name = "dslc"
version = "0.1.0"
edition = "2021"

[dependencies]
cel = { version = "0.12.0", optional = true }
serde_json = "1.0"
ide = { git = "https://github.com/rust-lang/rust-analyzer", package = "ide" }
ide_db = { git = "https://github.com/rust-lang/rust-analyzer", package = "ide-db" }
base_db = { git = "https://github.com/rust-lang/rust-analyzer", package = "base-db" }
project_model = { git = "https://github.com/rust-lang/rust-analyzer", package = "project-model" }
vfs = { git = "https://github.com/rust-lang/rust-analyzer", package = "vfs" }
paths = { git = "https://github.com/rust-lang/rust-analyzer", package = "paths" }
load-cargo = { git = "https://github.com/rust-lang/rust-analyzer", package = "load-cargo" }

[features]
# Enable CEL comparison by wiring a CEL evaluator in dslc/src/bin/bench.rs.
cel = ["dep:cel"]
