[package]
name = "fractal-generator"
version = "0.3.1"
edition = "2024"

[dependencies]

darcy-stdlib = { path = "../crates/darcy-stdlib" }
image = "0.25"

[features]
darcy-compiled = []
default = ["darcy-compiled"]

[build-dependencies]
darcy-build = { path = "../crates/darcy-build" }
darcy-stdlib = { path = "../crates/darcy-stdlib" }
