[package]
name = "darcy_lib"
version = "0.1.0"
edition = "2021"

[features]
darcy-compiled = []
default = ["darcy-compiled"]

[dependencies]
darcy-stdlib = { path = "../../../../crates/darcy-stdlib" }

[build-dependencies]
darcy-build = { path = "../../../../crates/darcy-build" }
darcy-stdlib = { path = "../../../../crates/darcy-stdlib" }
